--- a/src/main/resources/message_es_VE.properties
+++ b/src/main/resources/message_es_VE.properties
@@ -12,3 +12,6 @@ MOVIE_INVALID_CAST = cast
 
 MOVIE_INVALID_ID = Id not valid
 MOVIE_DELETED = movie deleted!
+
+MOVIE_INVALID_KEYWORD = Keyword invalid, please verify min longitud '4' char
+MOVIE_NOT_FUND_BY_KEYWORD = No match try another keyword
